# rust-fullstack-starter

./: .dockerignore  .gitignore  README.md  compose.yml  fixes_instructions.txt  patch_metadata.txt
backend/: Cargo.toml  Dockerfile
backend/migrations/: 000001_create_posts_table.sql  2025-10-30-000001_create_posts_table.sql
backend/src/: main.rs
docs/: STRUCTURE.md
frontend/: Cargo.toml  Dockerfile
frontend/src/: main.rs
